<package format="2">
  <name>ecto2</name>
  <version>0.0.0</version>
  <description>
  autonamous RC car.
  </description>
  <maintainer email="shaynexwang@gmail.com">Shayne Wang</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
