<package format="2">
  <name>ecto2</name>
  <version>0.0.0</version>
  <description>
  autonamous RC car.
  </description>
  <maintainer email="shaynexwang@gmail.com">Shayne Wang</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
