<package format="2">
  <name>ecto2</name>
  <version>0.0.0</version>
  <description>
  autonamous RC car.
  </description>
  <maintainer email="shaynexwang@gmail.com">Shayne Wang</maintainer>
  <license>MIT</license>
  <depend>joy</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

